# fantasy_football

./: .gitignore  pyproject.toml
examples/example_1/: create_all_dfs.py  create_passer_dfs.py  create_qb_dfs.py  create_receiver_dfs.py  create_rusher_dfs.py
examples/snap_counts/: qb_snap_counts.py  snap_count_functions.py  snap_count_ranking.py
src/fantasy_football/: generate_data_frames.py  generate_data_models.py
src/fantasy_football/data/data_model/: passer_metrics.py  passing_metrics.py  player.py  receiving_metrics.py  rushing_metrics.py
src/fantasy_football/data/named_tuple/: all_data_frames.py  passing_data_frames.py  qb_data_frames.py  receiving_data_frames.py  rushing_data_frames.py
src/utilities/: load_quarterbacks.py
